Ensure page never gets too wide

--- a/www/ifdb.css
+++ b/www/ifdb.css
@@ -181,7 +181,7 @@ div.topctl {
     font:  100%/140% Verdana, Arial, Helvetica, Sans-Serif;
     width: 100%;
     padding: 0 0 0 0;
-    margin: 0 0 2em 0;
+    margin: 0 0 1em 0;
     font-size: 95%;
     background: #e8e8e8;
     border-bottom: thin dotted #d0d0d0;
@@ -214,7 +214,9 @@ order to make the main contents more readable, we add some actual
 margins here.
 */
 div.main {
-    margin: 1em 1em 1em 1em;
+    max-width: 100ch;
+    padding: 1em 1em 1em 1em;
+    margin: 0 auto;
 }
 
 /*
@@ -853,6 +855,10 @@ spacing on any side.
 */
 p.nosp {
     margin: 0 0 0 0;
+}
+
+p {
+    max-width: 60ch;
 }
 
 /*
